--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -1066,49 +1066,75 @@
     list-style: none;
     padding: 0;
     margin: 0 0 10px 0;
+}
 
-    & .label_wrapper {
-        display: flex;
-        align-items: center;
-        gap: 5px;
-        margin-bottom: 5px;
+.label_wrapper {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin-bottom: 5px;
+}
 
-        & .label_btn {
-            max-width: 87%;
-            flex-grow: 1;
-            padding: 6px 10px;
-            color: white;
-            font-weight: 600;
-            overflow: hidden;
-            white-space: nowrap;
-            display: block;
-            text-overflow: ellipsis;
-        }
+.label_edit_btn {
+    cursor: pointer;
+    transition: all 0.225s ease;
+    border: none;
+    border-radius: 8px;
+    height: 35px;
+    width: 35px;
+    padding: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
 
-        & .label_edit_btn {
-            height: 35px;
-            width: 35px;
-            padding: 8px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: none;
+    &:hover,
+    &:focus {
+        outline: none;
+        background: rgba(0, 0, 0, 0.12);
+    }
 
-            &:hover,
-            &:focus {
-                outline: none;
-                background: rgba(0, 0, 0, 0.12);
-            }
-
-            & ion-icon {
-                font-size: 1em;
-            }
-        }
+    & ion-icon {
+        font-size: 1em;
     }
 }
 
-.create_new_label {
+.label_btn {
+    cursor: pointer;
+    text-align: left;
+    transition: all 0.225s ease;
+    border: none;
+    border-radius: 8px;
+    position: relative;
+    max-width: 87%;
+    flex-grow: 1;
+    background: #b3bac5;
+    padding: 6px 10px;
+    color: white;
+    font-weight: 600;
+    overflow: hidden;
+    white-space: nowrap;
+    display: block;
+    text-overflow: ellipsis;
+
+    & .active_label {
+        position: absolute;
+        font-size: 1.2em;
+        top: 50%;
+        right: 15px;
+        transform: translate(0, -45%);
+    }
+
+    &:hover,
+    &:focus {
+        outline: none;
+        box-shadow: -5px 0 #97a0af;
+    }
+}
+
+.dropdown .actions_list .create_new_label_btn {
     background: #e9e9e9;
+    text-align: center;
 
     &:hover,
     &:focus {
@@ -1117,11 +1143,87 @@
     }
 }
 
+.label_selector_container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin-bottom: 5px;
+
+    & .label_selector {
+        width: calc(20% - 5px);
+        border: none;
+        border-radius: 8px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        font-size: 1.2em;
+        color: white;
+
+        &:hover,
+        &:focus {
+            outline: none;
+            opacity: 0.7;
+        }
+    }
+}
+
+.no_color_selector {
+    display: flex;
+
+    & .label_selector {
+        display: flex;
+        cursor: pointer;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        border-radius: 8px;
+        width: calc(20% - 5px);
+        background: #b3bac5;
+        color: white;
+        height: 40px;
+
+        &:hover,
+        &:focus {
+            outline: none;
+            opacity: 0.7;
+        }
+    }
+
+    & .no_color_info {
+        padding: 8px;
+    }
+}
+
+.label_actions {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    & button {
+        width: 70px !important;
+
+        &.warning {
+            background: #ff5e57 !important;
+            color: #fff;
+            text-align: center;
+
+            &:hover,
+            &:focus {
+                outline: none;
+                background: #ff3f34 !important;
+            }
+        }
+    }
+}
+
 .card_label_green {
     background: #61bd4f;
 
-    &:hover,
-    &.focus {
+    &.label_btn:hover,
+    &.label_btn:focus {
         outline: none;
         box-shadow: -5px 0 #519839;
     }
@@ -1129,8 +1231,8 @@
 .card_label_yellow {
     background: #f2d600;
 
-    &:hover,
-    &.focus {
+    &.label_btn:hover,
+    &.label_btn:focus {
         outline: none;
         box-shadow: -5px 0 #d9b51c;
     }
@@ -1138,8 +1240,8 @@
 .card_label_orange {
     background: #ff9f1a;
 
-    &:hover,
-    &.focus {
+    &.label_btn:hover,
+    &.label_btn:focus {
         outline: none;
         box-shadow: -5px 0 #cd8313;
     }
@@ -1147,8 +1249,8 @@
 .card_label_red {
     background: #eb5a46;
 
-    &:hover,
-    &.focus {
+    &.label_btn:hover,
+    &.label_btn:focus {
         outline: none;
         box-shadow: -5px 0 #b04632;
     }
@@ -1156,8 +1258,8 @@
 .card_label_purple {
     background: #c377e0;
 
-    &:hover,
-    &.focus {
+    &.label_btn:hover,
+    &.label_btn:focus {
         outline: none;
         box-shadow: -5px 0 #89609e;
     }
@@ -1165,8 +1267,8 @@
 .card_label_blue {
     background: #0079bf;
 
-    &:hover,
-    &.focus {
+    &.label_btn:hover,
+    &.label_btn:focus {
         outline: none;
         box-shadow: -5px 0 #055a8c;
     }
@@ -1174,8 +1276,8 @@
 .card_label_lightblue {
     background: #00c2e0;
 
-    &:hover,
-    &.focus {
+    &.label_btn:hover,
+    &.label_btn:focus {
         outline: none;
         box-shadow: -5px 0 #0098b7;
     }
@@ -1183,8 +1285,8 @@
 .card_label_lime {
     background: #51e898;
 
-    &:hover,
-    &.focus {
+    &.label_btn:hover,
+    &.label_btn:focus {
         outline: none;
         box-shadow: -5px 0 #4bbf6b;
     }
@@ -1192,8 +1294,8 @@
 .card_label_pink {
     background: #ff78cb;
 
-    &:hover,
-    &.focus {
+    &.label_btn:hover,
+    &.label_btn:focus {
         outline: none;
         box-shadow: -5px 0 #c9558f;
     }
@@ -1201,8 +1303,8 @@
 .card_label_black {
     background: #344563;
 
-    &:hover,
-    &.focus {
+    &.label_btn:hover,
+    &.label_btn:focus {
         outline: none;
         box-shadow: -5px 0 #091e42;
     }
