--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -128,6 +128,17 @@ textarea {
                 padding: 0;
                 font-weight: 600;
             }
+
+            &.no_color {
+                margin: 0;
+                font-weight: 500;
+                padding: 0;
+            }
+
+            &.no_color_description {
+                margin: 0;
+                padding: 0;
+            }
         }
 
         & input {
@@ -166,7 +177,7 @@ textarea {
             }
         }
 
-        button {
+        .dropdown_btn {
             transition: all 0.225s ease;
             border: none;
             border-radius: 8px;
@@ -175,9 +186,12 @@ textarea {
             padding: 8px;
             width: 100%;
             text-align: left;
+            background: none;
 
-            &.create_new_label {
-                text-align: center;
+            &:hover,
+            &:focus {
+                outline: none;
+                background: rgba(0, 0, 0, 0.12);
             }
 
             &.warning {
