--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -1193,6 +1193,7 @@
 
     & .no_color_info {
         padding: 8px;
+        width: 80%;
     }
 }
 
@@ -1204,6 +1205,7 @@
 
     & button {
         width: 70px !important;
+        font-size: 0.9em;
 
         &.warning {
             background: #ff5e57 !important;
@@ -1217,6 +1219,59 @@
             }
         }
     }
+}
+
+.destination_container {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.destination_select_wrapper {
+    border-radius: 4px;
+    background-color: #fff;
+    position: relative;
+
+    &:nth-of-type(1) {
+        width: calc(70% - 10px);
+    }
+
+    &:nth-of-type(2) {
+        width: 30%;
+    }
+}
+
+.destination_select_label {
+    font-size: 0.8em;
+    font-weight: 500;
+    padding: 0 4px;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+}
+
+.destination_select {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    transition: all 0.225s ease;
+    background: #e9e9e9;
+    border: none;
+    border-radius: 8px;
+    padding: 12px 4px 4px 8px;
+    font-size: 0.9em;
+    cursor: pointer;
+    height: 60px;
+    width: 100%;
+
+    &:hover,
+    &:focus {
+        outline: none;
+        background: #d2d2d2;
+    }
+}
+
+.move_action_btn {
+    font-size: 0.9em;
 }
 
 .card_label_green {
